fix tags having a hover effect, and not showing correctly in group dms

--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@
     display: none;
 }
 
-.ownertag.botTagRegular-2HEhHi:hover, .ownertag-list.botTagRegular-2HEhHi:hover {
+/* .ownertag.botTagRegular-2HEhHi:hover,
+.ownertag-list.botTagRegular-2HEhHi:hover {
     background-color: transparent !important;
-}
+} */
 
 .OwnerTag-13h21hk {
     display: inline;
